# FireRedVAD

./: README.md
runtime/: README.md
runtime/common/frontend/: wav.h
runtime/convert/: README.md  export_aed.py  export_non_stream_vad.py  export_packed_cache_stream_vad.py
runtime/ncnn/: CMakeLists.txt  README.md  build.sh  build_android.sh  compare_aed_non_stream_with_pytorch.py  compare_vad_non_stream_with_pytorch.py  compare_vad_stream_with_pytorch.py  test.sh
runtime/ncnn/3rd/: build.sh  build_android.sh
runtime/ncnn/csrc/: firered_vad_stream_packed.cpp  firered_vad_stream_packed.h
runtime/ncnn/examples/: test_aed_non_stream.cpp  test_vad_non_stream.cpp  test_vad_stream_packed.cpp
